<resources>
    <string name="app_name">タイムカード</string>
    <string name="start_title">出社</string>
    <string name="end_title">退社</string>
    <string name="setup_title">設定</string>
    <string name="back_title">戻る</string>

    <string name="login_title">ログイン設定</string>
    <string name="user_title">ログイン名</string>
    <string name="passwd_title">パスワード</string>

    <string name="schedule_title">自動起動設定</string>
    <string name="schedule_comment">スケジュールを設定する</string>
    <string name="sttm_title">出社時刻</string>
    <string name="edtm_title">退社時刻</string>
    <string name="no_data">未設定</string>
    <string name="select_title">指定時刻になった時の処理</string>
    <string name="select_activity">アプリ起動</string>
    <string name="select_notification">通知に追加</string>
    <string name="check_notime">すぐに起動する（確認用）</string>
    <string name="boot_comment">電源OFF時もスケジュール設定をクリアしない</string>

    <string name="notify_title">タイムカード</string>
    <string name="notify_text">設定時刻になりました。</string>

    <string name="error_msg1">IDとパスワードを設定してください。</string>
    <string name="error_msg2">勤怠データが取得できませんでした。</string>

    <string name="title_activity_scheduled_main">ScheduledMainActivity</string>
    <string name="title_activity_received">ReceivedActivity</string>

</resources>
