<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_margin="5dp"
                android:layout_span="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/text_startTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_endTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end_title"
                android:textSize="20sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/act_button"
                    android:gravity="center"
                    android:text="@string/start_title"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_startTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text=""
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_end"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/act_button"
                    android:text="@string/end_title"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text=""
                    android:textSize="35sp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/link_button"
                    android:layout_margin="10dp"
                    android:text="@string/login_title" />

                <Button
                    android:id="@+id/button_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/link_button"
                    android:layout_margin="10dp"
                    android:text="@string/schedule_title" />

                <TextView
                    android:id="@+id/link_cybozu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:autoLink="web"
                    />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>